# dendritik-liquid

./: .gitignore  PROGRESS.md  README.md  STATUS.md  main.py  pyproject.toml
data/: download_datasets.py
experiments/: train_baseline.py
experiments/configs/: baseline_vit.yaml
lightning_logs/version_0/: hparams.yaml  metrics.csv
scripts/: monitor_training.sh  training_status.py
src/evaluation/: metrics.py
src/models/: dendritic_module.py  dendritic_vit.py  vit_base.py
tests/: test_baseline_vit.py  test_dendritic.py  test_environment.py
